--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.jedk1</groupId>
   <artifactId>jedcore</artifactId>
-  <version>2.15.0-PK1.11.1</version>
+  <version>2.15.1-PRE-RELEASE-1-PK1.12.0</version>
   <packaging>jar</packaging>
   <name>JedCore</name>
 
@@ -13,21 +13,26 @@
       <id>spigot-repo</id>
       <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
     </repository>
+    <repository>
+      <id>papermc</id>
+      <url>https://repo.papermc.io/repository/maven-public/</url>
+    </repository>
+
   </repositories>
 
   <dependencies>
-    <!-- Spigot API -->
-    <dependency>
-      <groupId>org.spigotmc</groupId>
-      <artifactId>spigot-api</artifactId>
-      <version>1.20.2-R0.1-SNAPSHOT</version>
-      <scope>provided</scope>
-    </dependency>
     <!-- ProjectKorra -->
     <dependency>
       <groupId>com.projectkorra</groupId>
       <artifactId>projectkorra</artifactId>
-      <version>1.11.1</version>
+      <version>1.12.0</version>
+    </dependency>
+    <!-- Paper api -->
+    <dependency>
+      <groupId>io.papermc.paper</groupId>
+      <artifactId>paper-api</artifactId>
+      <version>1.20.2-R0.1-SNAPSHOT</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
@@ -51,8 +56,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.0</version>
         <configuration>
-          <source>9</source>
-          <target>9</target>
+          <source>16</source>
+          <target>16</target>
         </configuration>
       </plugin>
       <plugin>
