- Initial commit for PK 1.12.1+/Folia support - backwards compatible. Adds SchedulerUtil. - Adds LightManagerUtil, prefers ProjectKorras LightManager going forward but falls back to the built-in manager on older versions.

--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,9 @@
     <dependency>
       <groupId>com.projectkorra</groupId>
       <artifactId>projectkorra</artifactId>
-      <version>1.12.0</version>
-      <scope>provided</scope>
+      <version>1.12.1-PRE-RELEASE-1</version>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/libs/ProjectKorra-1.12.1-PRE-RELEASE-1.jar</systemPath>
     </dependency>
   </dependencies>
 
