--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -4,6 +4,7 @@ version: ${project.version}
 authors: ['jedk1']
 depend: ['ProjectKorra']
 api-version: 1.20
+folia-supported: true
 permissions:
   #OP permissions
   jedcore.admin:
